description of the footer

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <!-- myfooter -->
         <section class="myfooter">
             <div class="container">
-                <p>&copy; 2023 | Noel DIAMONA</p>
+                <p>&copy; 2023 | Noel DIAMONA Front End Developpeur</p>
                 <hr>
                 <!-- LINK OF MEDIA SOCIAUX -->
                 <div class="link-media">
