New modification of the design to section contact and ajout the code of file style media query

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     <div class="btn-appointement">
                         <a href="#">Appointement</a>
                     </div>
-
+                    <div>
+                        <i class="fa-solid fa-bars btn-toogle"></i>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -193,14 +195,14 @@
                 <hr>
                 <div class="card-expertises">
                     <div class="card-content-expertise-details">
-                        <img src="./public/assets/img/datanew.jpg" alt="" srcset="">
-                        <h3>Data Analytics</h3>
+                        <h3>Data analyst</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe similique nam voluptas exercitationem! Deleniti, ipsam.
+                            Data analyst responsibilities include conducting full lifecycle analysis to include requirements, 
+                            activities and design. Data analysts will develop analysis and reporting capabilities. 
+                            They will also monitor performance and quality control plans to identify improvements.
                         </p>
                     </div>
                     <div class="card-content-expertise-details">
-                        <img src="./public/assets/img/marketingdigital.svg" alt="" srcset="">
                         <h3>Marketing Digital</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe similique nam voluptas exercitationem! Deleniti,
@@ -208,15 +210,13 @@
                         </p>
                     </div>
                     <div class="card-content-expertise-details">
-                        <img src="./public/assets/img/webdesign.jpeg" alt="" srcset="">
-                        <h3>Web Design</h3>
+                        <h3>Web Design &  Developpement Web</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe similique nam voluptas exercitationem! Deleniti,
                             ipsam.
                         </p>
                     </div>
                     <div class="card-content-expertise-details">
-                        <img src="./public/assets/img/graphicdesign.svg" alt="" srcset="">
                         <h3>Graphique</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe similique nam voluptas exercitationem! Deleniti,
