--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./public/assets/style/@media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="/animate.css/animate.min.css">
 
     
     <title>MyPortefolio</title>
@@ -52,7 +53,7 @@
             <div class="container">
                 <div class="presentation">
                     <div class="presentation-fonction">
-                        <p>I'am </p>
+                        <p class="animate__animated animate__bounce">I'am </p>
                         <span>Noël DIAMONA MBALA</span><br>
                         <span>Front End Developpeur Junoir <br> & Network Administrator...</span>                        
                     </div>
